# CK2ToEU4

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CK2ToEU4-Installer.iss  CK2ToEU4.sln  CMakeLists.txt  README.md  appveyor.yml  build_linux.sh  build_linux_foreign.sh  build_mac.sh
.github/: dependabot.yml
CK2ToEU4/: CK2ToEU4.vcxproj  CK2ToEU4.vcxproj.filters  CMakeLists.txt  Copy_Files.bat  Copy_Files.sh  Copy_Files_Debug.bat  Religions.cpp  Religions.h  log.txt
CK2ToEU4/Data_Files/: CK2ToEU4DefaultConfiguration.xml  FAQ.txt  ReadMe.txt  SupportedConvertersDefault.xml  configuration-example.txt  configuration.txt  configuration_l_english.yml  configuration_l_french.yml  configuration_l_german.yml  configuration_l_italian.yml  configuration_l_latin.yml  configuration_l_russian.yml  fronter-configuration.txt  fronter-options.txt  options_l_english.yml  options_l_french.yml  options_l_german.yml  options_l_italian.yml  options_l_latin.yml  options_l_russian.yml
CK2ToEU4/Data_Files/configurables/: CleanSlate_province_mappings.txt  HIP - Historical Immersion Project_province_mappings.txt  Tianxia_culture_map.txt  Tianxia_province_mappings.txt  african_passes.txt  china.txt  chinaTags.txt  chinese_offmap_provinces.txt  chinese_tag_mappings.txt  ck2_localization_override.csv  culture_map.txt  government_map.txt  i_am_hre.txt  monuments_mappings.txt  pagan_religions.txt  province_mappings.txt  reformed_religions_mappings.txt  religion_map.txt  ruler_personalities.txt  shatter_empires.txt  tag_mappings.txt  test-updater.txt  version.txt  victoria3_religion_reforms.txt
CK2ToEU4/Data_Files/configurables/CleanSlate/: culture_map.txt  government_map.txt  pagan_religions.txt  religion_map.txt  ruler_personalities.txt  tag_mappings.txt
CK2ToEU4/Data_Files/configurables/Tianxia/: Tianxia_culture_map.txt  Tianxia_tag_mappings.txt  chinese_offmap_provinces.txt  chinese_tributaries.txt  culture_map.txt  province_mappings.txt  reformed_religions_mappings.txt  religion_map.txt  tag_mappings.txt
CK2ToEU4/Data_Files/configurables/dynastyflags/: 00_list.txt  597.tga  800.tga
CK2ToEU4/Resources/images/: SteamThumbnail.psd  thumbnail.psd
CK2ToEU4/Resources/workshop/: workshop.description.txt
CK2ToEU4/Resources/workshop/mod/: ck2toeu4.mod
CK2ToEU4/Source/: CK2ToEU4Converter.cpp  CK2ToEU4Converter.h  Configuration.h  main.cpp
CK2ToEU4/Source/CK2World/: World.cpp  World.h
CK2ToEU4/Source/CK2World/Characters/: Character.cpp  Character.h  Characters.cpp  Characters.h  Domain.cpp  Domain.h
CK2ToEU4/Source/CK2World/Dynasties/: CoatOfArms.cpp  CoatOfArms.h  Dynasties.cpp  Dynasties.h  Dynasty.cpp  Dynasty.h
CK2ToEU4/Source/CK2World/Flags/: Flags.cpp  Flags.h
CK2ToEU4/Source/CK2World/Mods/: Mod.cpp  Mod.h  Mods.cpp  Mods.h
CK2ToEU4/Source/CK2World/Offmaps/: Offmap.cpp  Offmap.h  Offmaps.cpp  Offmaps.h
CK2ToEU4/Source/CK2World/Provinces/: Barony.cpp  Barony.h  Province.cpp  Province.h  Provinces.cpp  Provinces.h
CK2ToEU4/Source/CK2World/Relations/: AllRelations.cpp  AllRelations.h  Relation.cpp  Relation.h  Relations.cpp  Relations.h  Tributary.cpp  Tributary.h
CK2ToEU4/Source/CK2World/Religions/: Religion.cpp  Religion.h  Religions.cpp  Religions.h
CK2ToEU4/Source/CK2World/Titles/: Liege.cpp  Liege.h  Title.cpp  Title.h  Titles.cpp  Titles.h
CK2ToEU4/Source/CK2World/Vars/: Vars.cpp  Vars.h
CK2ToEU4/Source/CK2World/Wonders/: ConstructionHistory.cpp  ConstructionHistory.h  Wonder.cpp  Wonder.h  Wonders.cpp  Wonders.h
CK2ToEU4/Source/Common/: CommonFunctions.cpp  CommonFunctions.h  ID.cpp  ID.h  Version.cpp  Version.h
CK2ToEU4/Source/Configuration/: Configuration.cpp  Configuration.h  ConfigurationDetails.cpp  ConfigurationDetails.h
CK2ToEU4/Source/EU4World/: EU4World.cpp  EU4World.h
CK2ToEU4/Source/EU4World/Country/: Country.cpp  Country.h  CountryDetails.cpp  CountryDetails.h  MonarchNames.cpp  MonarchNames.h
CK2ToEU4/Source/EU4World/Diplomacy/: Agreement.cpp  Agreement.h  Diplomacy.cpp  Diplomacy.h
CK2ToEU4/Source/EU4World/Output/: ModFile.h  outAgreement.cpp  outCountry.cpp  outCountry.h  outDiplomacy.cpp  outModFile.cpp  outModFile.h  outMonument.cpp  outMonument.h  outProvince.cpp  outReligion.cpp  outReligion.h  outVersion.cpp  outVersion.h  outWorld.cpp  output.h
CK2ToEU4/Source/EU4World/Province/: EU4Province.cpp  EU4Province.h  ProvinceDetails.cpp  ProvinceDetails.h  ProvinceModifier.cpp  ProvinceModifier.h
CK2ToEU4/Source/Mappers/ColorScraper/: ColorScraper.cpp  ColorScraper.h
CK2ToEU4/Source/Mappers/CultureMapper/: CultureMapper.cpp  CultureMapper.h  CultureMappingRule.cpp  CultureMappingRule.h
CK2ToEU4/Source/Mappers/DevWeightsMapper/: DevWeightsMapper.cpp  DevWeightsMapper.h
CK2ToEU4/Source/Mappers/GovernmentsMapper/: GovernmentsMapper.cpp  GovernmentsMapper.h  GovernmentsMapping.cpp  GovernmentsMapping.h
CK2ToEU4/Source/Mappers/IAmHreMapper/: IAmHreMapper.cpp  IAmHreMapper.h
CK2ToEU4/Source/Mappers/LocalizationMapper/: LocalizationMapper.cpp  LocalizationMapper.h
CK2ToEU4/Source/Mappers/MonumentsMapper/: BuildTriggerBuilder.cpp  BuildTriggerBuilder.h  InternalModifiers.cpp  InternalModifiers.h  MonumentsMapper.cpp  MonumentsMapper.h  MonumentsMapping.cpp  MonumentsMapping.h
CK2ToEU4/Source/Mappers/PersonalityScraper/: PersonalityScraper.cpp  PersonalityScraper.h
CK2ToEU4/Source/Mappers/PrimaryTagMapper/: PrimaryTagCulture.cpp  PrimaryTagCultureGroup.cpp  PrimaryTagMapper.cpp  PrimaryTagMapper.h
CK2ToEU4/Source/Mappers/ProvinceMapper/: ProvinceMapper.cpp  ProvinceMapper.h  ProvinceMapping.cpp  ProvinceMapping.h  ProvinceMappingsVersion.cpp  ProvinceMappingsVersion.h
CK2ToEU4/Source/Mappers/ProvinceTitleMapper/: ProvinceTitleGrabber.cpp  ProvinceTitleGrabber.h  ProvinceTitleMapper.cpp  ProvinceTitleMapper.h
CK2ToEU4/Source/Mappers/ReformedReligionMapper/: ReformedReligionMapper.cpp  ReformedReligionMapper.h  ReformedReligionMapping.cpp  ReformedReligionMapping.h
CK2ToEU4/Source/Mappers/RegionMapper/: Area.cpp  Area.h  Region.cpp  Region.h  RegionMapper.cpp  RegionMapper.h  SuperRegion.cpp
(+1069 files in other folders)
